--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap eCommerce Page Template</title>
+    <title>Free Fordcato Software</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
   </head>
@@ -141,7 +141,6 @@
         </div>-->
       </div>
     </div>
-    <hr>
     <hr>
     <footer class="text-center">
       <div class="container">
