--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <meta property="og:title" content="Free Fordcato Software" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://freefordcatosoftware.com.ru/" />
+<meta property="og:image" content="https://freefordcatosoftware.com.ru/images/fordcato_t.png" />
+<meta property="og:description" content="Projects" />
     <title>Free Fordcato Software</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
