--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <meta property="og:title" content="Free Fordcato Software" />
 <meta property="og:type" content="website" />
+	  <link rel="icon" type="image/x-icon" href="/images/fordcato_t.png">
 <meta property="og:url" content="https://freefordcatosoftware.com.ru/" />
 <meta property="og:image" content="https://freefordcatosoftware.com.ru/images/fordcato_t.png" />
 <meta property="og:description" content="Projects" />
