--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </div>
         </div>
 
-        <!--<div class="col-md-4 pb-1 pb-md-0">
+        <div class="col-md-4 pb-1 pb-md-0">
           <div class="card">
             <img class="card-img-top" src="images/mods/fs_original.jpg" alt="Original Friendly Stunstick">
             <div class="card-body">
@@ -144,7 +144,7 @@
               <a href="#" class="btn btn-primary">Download&nbsp;</a>
             </div>
           </div>
-        </div>-->
+        </div>
       </div>
     </div>
     <hr>
