--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <h5 class="card-title">Nomad</h5>
 				<p class="card-subtitle">Release Date: 5 October 2023</p>
               <p class="card-text">Map from the "Beyond The Bar", a Half-Life 2 Beta themed mapping competition built on Coterminus. Based on Wasteland Concept Art.</p>
-              <a href="https://www.moddb.com/mods/coterminus/addons/beyond-the-bar-one-bringing-concept-art-to-life" class="btn btn-primary">Download</a>
+              <a href="mods/nomad/" class="btn btn-primary">Download</a>
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
               <h5 class="card-title">Structure</h5>
 				<p class="card-subtitle">Release Date: 10 February 2023</p>
               <p class="card-text">Map Labs - Rolling Thunder.<br>An IDF informant has come forward with a tip regarding terrorist activity on the town of El-Amin. Destroy your surroundings in a multitude of ways to reshape this sandy environment.</p>
-              <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2926969944" class="btn btn-primary">Download&nbsp;</a>
+              <a href="mods/deadcenterabridged/" class="btn btn-primary">Download</a>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
               <h5 class="card-title">Dead Center Abridged</h5>
               <p class="card-subtitle">Release Date: 15 December 2020</p>
               <p class="card-text">Left 4 Dead 2: Abridged<br>Rescue some cola and steal a car.</p>
-              <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2317964262" class="btn btn-primary">Download&nbsp;</a>
+              <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2317964262" class="btn btn-primary">Download</a>
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
               <h5 class="card-title">Friendly Stunstick</h5>
 				<p class="card-subtitle">Release Date: 2 October 2020</p>
               <p class="card-text">Original release of Friendly Stunstick.</p>
-              <a href="#" class="btn btn-primary">Download&nbsp;</a>
+              <a href="#" class="btn btn-primary">Download</a>
             </div>
           </div>
         </div>
