--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <h5 class="card-title">Nomad</h5>
 				<p class="card-subtitle">Release Date: 5 October 2023</p>
               <p class="card-text">Map from the "Beyond The Bar", a Half-Life 2 Beta themed mapping competition built on Coterminus. Based on Wasteland Concept Art.</p>
-              <a href="mods/nomad/" class="btn btn-primary">Download</a>
+              <a href="mods/nomad/" class="btn btn-primary">More Info</a>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
               <h5 class="card-title">Dead Center Abridged</h5>
               <p class="card-subtitle">Release Date: 15 December 2020</p>
               <p class="card-text">Left 4 Dead 2: Abridged<br>Rescue some cola and steal a car.</p>
-              <a href="mods/deadcenterabridged/" class="btn btn-primary">Download</a>
+              <a href="mods/deadcenterabridged/" class="btn btn-primary">More Info</a>
             </div>
           </div>
         </div>
