--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <h5 class="card-title">Friendly Stunstick - Deceptive Shock</h5>
 				<p class="card-subtitle">Release Date: 10 December 2023</p>
               <p class="card-text">In this post-Halloween update, FS celebrates its 3 year (plus 2 months and a couple of days) anniversary with a slew of exhilarating enhancements.</p>
-              <a href="https://friendlystunstick.freefordcatosoftware.com.ru/" class="btn btn-primary">Download</a>
+              <a href="https://friendlystunstick.freefordcatosoftware.com.ru/" class="btn btn-primary">Visit Site</a>
             </div>
           </div>
         </div>
@@ -105,7 +105,7 @@
               <h5 class="card-title">Trolley Problem</h5>
 				<p class="card-subtitle">Release Date: 15 April 2023</p>
               <p class="card-text">Interlopers Shitty Maps Night 13.<br>The Trolley Problem - Thought Experiment</p>
-              <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2923422039" class="btn btn-primary">Download</a>
+              <a href="mods/trolley_problem" class="btn btn-primary">More Info</a>
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
               <h5 class="card-title">Friendly Stunstick</h5>
 				<p class="card-subtitle">Release Date: 2 October 2020</p>
               <p class="card-text">Original release of Friendly Stunstick.</p>
-              <a href="#" class="btn btn-primary">Download</a>
+              <a href="https://friendlystunstick.freefordcatosoftware.com.ru/" class="btn btn-primary">Visit Site</a>
             </div>
           </div>
         </div>
