--- a/mods/de_structure/index.html
+++ b/mods/de_structure/index.html
@@ -4,22 +4,35 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nomad</title>
-<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<title>Structure</title>
+<link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<!-- CSS override -->
+<style>
+body {
+	background: url("images/de_structure.jpg") center center;
+}
+
+</style>
 </head>
 <body>
 <!-- Main Container -->
 <div class="container"> 
   <!-- Header -->
   <header class="header">
-    <h4 class="logo">Nomad</h4>
+    <h4 class="logo">Structure</h4>
   </header>
   <!-- Hero Section -->
   <section class="intro">
     <div class="column">
       <iframe width="60%" height="50%" src="https://www.youtube.com/embed/Jf2PGx-oswc" title="Nomad - Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </div>
     <div class="column">
-      <p>Map from the "Beyond The Bar", a Half-Life 2 Beta themed mapping competition built on Coterminus. Based on Wasteland Concept Art.</p>
+      <p>#MapLabs<br><br>
+Structure - Bomb-Defuse
+<br><br>
+Counter-Terrorists: An IDF informant has come forward with a tip regarding terrorist activity on the town of El-Amin. In light of reports regarding weapon trafficking, money laundering, manufacturing of improvised explosives and stolen military equipment, we have decided to move our forces into the region. It is believed the terrorist organization in question has been planning to destroy any remaining equipment or goods in the area, so be prepared to defuse any potential planted explosives. The town has been evacuated in preparation for the attack.
+<br><br>
+Terrorists: The IDF has discovered our equipment in El-Amin and are preparing to take control of it. We do not have the resources to extract it, so you must destroy it. Plant the C4 explosive at either of the equipment stashes and don't let them take what is ours!
+</p>
 		<a href="https://www.moddb.com/mods/coterminus/addons/beyond-the-bar-one-bringing-concept-art-to-life" class="btn btn-primary">Download</a>
     </div>
   </section>	
