--- a/mods/deadcenterabridged/index.html
+++ b/mods/deadcenterabridged/index.html
@@ -5,7 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dead Center Abridged</title>
-<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<!-- CSS override -->
+<style>
+body {
+	background: url("images/dca_bg.jpg") center center;
+}
+
+</style>
 </head>
 <body>
 <!-- Main Container -->
