--- a/mods/trolley_problem/index.html
+++ b/mods/trolley_problem/index.html
@@ -5,7 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Trolley Problem</title>
-<link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<!-- CSS override -->
+<style>
+body {
+	background: url("images/ar_trolley.jpg") center center;
+}
+
+</style>
 </head>
 <body>
 <!-- Main Container -->
@@ -17,7 +24,7 @@
   <!-- Hero Section -->
   <section class="intro">
     <div class="column">
-      <iframe width="60%" height="50%" src="https://www.youtube.com/embed/Jf2PGx-oswc" title="Nomad - Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </div>
+      <iframe width="60%" height="50%" src="https://www.youtube.com/embed/WEgSjTUojoA" title="Nomad - Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </div>
     <div class="column">
       <p>Interlopers Shitty Maps Night 13.<br>The Trolley Problem - Thought Experiment<br><br>The terrorists and the counter-terrorists have had enough of senselessly fighting eachother, so they decide to leave their world of death and destruction to fight for a much higher cause, philosphy.<br><br>Each round a member from each team is tasked with an unenviable task: pick what half of his team has to die.<br><br>Each team's surviving members will then be put in an arena to find out which team has the best moral high ground. In the rare case that ethics don't allow you to pick who lives and who dies, we made sure to reduce any possible emotional trauma by killing any witnesses.</p>
 		<a href="https://www.moddb.com/mods/coterminus/addons/beyond-the-bar-one-bringing-concept-art-to-life" class="btn btn-primary">Download</a>
