--- a/mods/de_structure/index.html
+++ b/mods/de_structure/index.html
@@ -33,7 +33,7 @@ Counter-Terrorists: An IDF informant has come forward with a tip regarding terro
 <br><br>
 Terrorists: The IDF has discovered our equipment in El-Amin and are preparing to take control of it. We do not have the resources to extract it, so you must destroy it. Plant the C4 explosive at either of the equipment stashes and don't let them take what is ours!
 </p>
-		<a href="https://www.moddb.com/mods/coterminus/addons/beyond-the-bar-one-bringing-concept-art-to-life" class="btn btn-primary">Download</a>
+		<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2926969944" class="btn btn-primary">Download</a>
     </div>
   </section>	
 </div>
