--- a/mods/nomad/index.html
+++ b/mods/nomad/index.html
@@ -6,6 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Nomad</title>
 <link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<!-- CSS override -->
+<style>
+body {
+	background: url("images/ar_trolley.jpg") center center;
+}
+
+</style>
 </head>
 <body>
 <!-- Main Container -->
