--- a/mods/de_structure/index.html
+++ b/mods/de_structure/index.html
@@ -10,6 +10,14 @@
 <style>
 body {
 	background: url("images/de_structure.jpg") center center;
+	background-repeat: no-repeat;
+  	background-attachment: fixed;  
+  	background-size: cover;
+}
+
+header {
+	background-color: #326972;
+	
 }
 
 </style>
