--- a/mods/deadcenterabridged/index.html
+++ b/mods/deadcenterabridged/index.html
@@ -11,6 +11,9 @@
 <style>
 body {
 	background: url("images/dca_bg.jpg") center center;
+	background-repeat: no-repeat;
+  	background-attachment: fixed;  
+  	background-size: cover;
 }
 
 header {
