--- a/mods/nomad/index.html
+++ b/mods/nomad/index.html
@@ -9,7 +9,15 @@
 <!-- CSS override -->
 <style>
 body {
-	background: url("images/ar_trolley.jpg") center center;
+	background: url("images/nomad_background.jpg") center center;
+	background-repeat: no-repeat;
+  	background-attachment: fixed;  
+  	background-size: cover;
+}
+
+header {
+	background-color: black;
+	color: white;
 }
 
 </style>
