--- a/mods/trolley_problem/index.html
+++ b/mods/trolley_problem/index.html
@@ -10,6 +10,13 @@
 <style>
 body {
 	background: url("images/ar_trolley.jpg") center center;
+	background-repeat: no-repeat;
+  	background-attachment: fixed;  
+  	background-size: cover;
+}
+
+header {
+	background-color: #326972;
 }
 
 </style>
