structure screenshots and page

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <h5 class="card-title">Structure</h5>
 				<p class="card-subtitle">Release Date: 10 February 2023</p>
               <p class="card-text">Map Labs - Rolling Thunder.<br>An IDF informant has come forward with a tip regarding terrorist activity on the town of El-Amin. Destroy your surroundings in a multitude of ways to reshape this sandy environment.</p>
-              <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2926969944" class="btn btn-primary">Download</a>
+              <a href="mods/de_structure" class="btn btn-primary">More Info</a>
             </div>
           </div>
         </div>
