--- a/mods/de_structure/index.html
+++ b/mods/de_structure/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Structure</title>
 <link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<link href="../css/slideshow.css" rel="stylesheet" type="text/css">
 <!-- CSS override -->
 <style>
 body {
@@ -32,7 +33,46 @@ header {
   <!-- Hero Section -->
   <section class="intro">
     <div class="column">
-      <iframe width="60%" height="50%" src="https://www.youtube.com/embed/Jf2PGx-oswc" title="Nomad - Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> </div>
+   
+<div class="slidecontainer">
+  <div class="mySlides">
+    <img src="images/screenshots/1.jpg" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <img src="images/screenshots/2.jpg" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="images/screenshots/3.jpg" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="images/screenshots/4.jpg" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="images/screenshots/5.jpg" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="images/screenshots/6.jpg" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="images/screenshots/7.jpg" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="images/screenshots/8.jpg" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="images/screenshots/9.jpg" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="images/screenshots/10.jpg" style="width:100%">
+  </div>
+    
+  <a class="prev" onclick="plusSlides(-1)">❮</a>
+  <a class="next" onclick="plusSlides(1)">❯</a>
+<script src="../js/slideshow.js"></script>
+</div>
+
+   </div>
     <div class="column">
       <p>#MapLabs<br><br>
 Structure - Bomb-Defuse
