--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				</a>
               </div>
               <div class="carousel-item">
-				  <a href="https://www.moddb.com/mods/coterminus/addons/beyond-the-bar-one-bringing-concept-art-to-life">
+				  <a href="mods/nomad/">
                 <img class="d-block w-100" src="images/nomad.png" alt="Trolley Problem">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Nomad</h5>
@@ -49,7 +49,7 @@
 					  </a>
               </div>
               <div class="carousel-item">
-				  <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2923422039">
+				  <a href="mods/trolley_problem/">
                 <img class="d-block w-100" src="images/header/trolley_problem.png" alt="Trolley Problem">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Trolley Problem</h5>
