metadata for embed

--- a/mods/de_structure/index.html
+++ b/mods/de_structure/index.html
@@ -7,6 +7,12 @@
 <title>Structure</title>
 <link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 <link href="../css/slideshow.css" rel="stylesheet" type="text/css">
+<meta property="og:title" content="Free Fordcato Software" />
+<meta property="og:type" content="website" />
+	  <link rel="icon" type="image/x-icon" href="/images/fordcato_t.png">
+<meta property="og:url" content="https://freefordcatosoftware.com.ru/mods/de_structure/" />
+<meta property="og:image" content="https://freefordcatosoftware.com.ru/images/mods/de_structure.jpg" />
+<meta property="og:description" content="Structure" />
 <!-- CSS override -->
 <style>
 body {
