--- a/mods/deadcenterabridged/index.html
+++ b/mods/deadcenterabridged/index.html
@@ -7,6 +7,12 @@
 <title>Dead Center Abridged</title>
 <link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 <link href="../css/slideshow.css" rel="stylesheet" type="text/css">
+<meta property="og:title" content="Free Fordcato Software" />
+<meta property="og:type" content="website" />
+	  <link rel="icon" type="image/x-icon" href="/images/fordcato_t.png">
+<meta property="og:url" content="https://freefordcatosoftware.com.ru/mods/deadcenterabridged/" />
+<meta property="og:image" content="https://freefordcatosoftware.com.ru/images/mods/dca.jpg" />
+<meta property="og:description" content="Dead Center Abridged" />
 <!-- CSS override -->
 <style>
 body {
