--- a/mods/nomad/index.html
+++ b/mods/nomad/index.html
@@ -6,6 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Nomad</title>
 <link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
+<meta property="og:title" content="Free Fordcato Software" />
+<meta property="og:type" content="website" />
+	  <link rel="icon" type="image/x-icon" href="/images/fordcato_t.png">
+<meta property="og:url" content="https://freefordcatosoftware.com.ru/mods/nomad/" />
+<meta property="og:image" content="https://freefordcatosoftware.com.ru/images/mods/nomad_background.jpg" />
+<meta property="og:description" content="Nomad" />
 <!-- CSS override -->
 <style>
 body {
