--- a/mods/de_structure/index.html
+++ b/mods/de_structure/index.html
@@ -72,6 +72,12 @@ header {
   <div class="mySlides">
     <img src="images/screenshots/10.jpg" style="width:100%">
   </div>
+  <div class="mySlides">
+    <img src="images/screenshots/11.jpg" style="width:100%">
+  </div>
+  <div class="mySlides">
+    <img src="images/screenshots/12.jpg" style="width:100%">
+  </div>
     
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
