--- a/mods/village/index.html
+++ b/mods/village/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3172199265497224"
      crossorigin="anonymous"></script>
-<title>Nomad</title>
+<title>Village</title>
 <link href="../css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 <link rel="icon" type="image/x-icon" href="/images/fordcato_t.png">
 
