dark theme for someone

--- a/mods/fs/htl_fspt.html
+++ b/mods/fs/htl_fspt.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {background-color: black;}
+h1   {color: white;}
+h2   {color: white;}
+h3   {color: white;}
+p    {color: white;}
+</style>
+</head>
 <body>
 
 <h1>How to launch FS playtest</h1>
